--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<title>Testes</title>
-	<script type="text/javascript" src="js/efectsJavascript.js"></script>
+	<script type="text/javascript" src="efectsJavascript.js"></script>
 </head>
 <body>
 	<p>Efeito Zoom</p>
